# python-midas

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
doc/: v2-migration.md
src/midas/: __init__.py  auth.py  client.py  enums.py  time.py
src/midas/entities/: __init__.py  models.py
tests/: test_auth.py  test_client.py  test_entities.py  test_integration.py
