[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-midas"
version = "1.0.1"
description = "Python client library for the California Energy Commission MIDAS API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Clark Communications Corporation"}
]
keywords = ["midas", "energy", "california", "rates", "ghg", "grid"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.5",
    "httpx>=0.27",
    "pendulum>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.3",
    # Strict wire-contract validation in the integration suite (validates raw
    # responses against the midas-api-specs JSON Schemas).
    "jsonschema>=4.18",
]

[project.urls]
Homepage = "https://grid-coordination.energy"
Repository = "https://github.com/grid-coordination/python-midas"
Issues = "https://github.com/grid-coordination/python-midas/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/midas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit the live MIDAS API (anonymous, no credentials)",
]

[tool.ruff]
src = ["src"]
